--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,9 +1,40 @@
 {%extends "base.html"%}
+{%load static%}
 
 {%block title%}
     My Blog
 {%endblock%}
 
+{%block css_files%}
+    <link rel="stylesheet" href="{%static "blog/post.css"%}"/>
+    <link rel="stylesheet" href="{%static "blog/index.css"%}"/>
+
+{%endblock%}
+
 {%block content%}
-    <h1>Welcome to my Blog</h1>
+    <section id="welcome">
+        <header>
+            <img src="{%static "blog/images/sreeteja.jpg"%}" alt="Sreeteja- The Author of this Blog"/>
+            <h2>SREETEJA's BLOG</h2>
+        </header>
+        <p>Hi, I am Sreeteja and I love to blog about Tech!</p>
+    </section>
+
+    <section id="latest-posts">
+        <h2>My latest Thoughts</h2>
+
+        <ul>
+            {%include "blog/includes/post.html"%}
+        </ul>
+    </section>
+
+    <section id="about">
+        <h2>What I Do</h2>
+        <p>
+            I love programming, I love to help others and i enjoy exploring new technlogies in general!
+        </p>
+        <p>
+            My goal is to keep on grwoing as a developer  and if i could help you do the same, I'd be very happy!
+        </p>
+    </section>
 {%endblock%}
