--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -3,7 +3,7 @@
 
 
 {%block title%}
-    This post title
+    {{post.title}}
 {%endblock%}
 
 {%block css_files%}
@@ -12,28 +12,17 @@
 
 {%block content%}
     <section id="summary">
-        <h2>Post Title</h2>
+        <h2>{{post.title}}</h2>
         <article>
-            <img src="{%static "blog/images/mountains.jpg"%}" alt="Post Title"/>
-            <address>By Sreeteja</address>
+            <img src="{%static "blog/images/"|add:post.image %}" alt="{{post.title}}"/>
+            <address>{{post.author}}</address>
             <div>
-                Last updated on <time>Dec 11th</time>
+                Last updated on <time>{{post.date|date:"d M Y"}}</time>
             </div>
         </article>
     </section>
 
     <main>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dicta accusamus quis. Tenetur ratione, delectus, eum distinctio reiciendis commodi, deleniti necessitatibus architecto id accusamus illum magnam neque at assumenda fugiat?
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dicta accusamus quis. Tenetur ratione, delectus, eum distinctio reiciendis commodi, deleniti necessitatibus architecto id accusamus illum magnam neque at assumenda fugiat?
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dicta accusamus quis. Tenetur ratione, delectus, eum distinctio reiciendis commodi, deleniti necessitatibus architecto id accusamus illum magnam neque at assumenda fugiat?
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dicta accusamus quis. Tenetur ratione, delectus, eum distinctio reiciendis commodi, deleniti necessitatibus architecto id accusamus illum magnam neque at assumenda fugiat?
-        </p>
+        {{post.content|linebreaks}}
     </main>
 {%endblock%}
