Read later and delte the read blog

--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -14,7 +14,7 @@
 {% if comment_form.errors %}
 <div id="alert">
     <h2>Saving the comment failed!</h2>
-    <p>Please check the comment form below the post and fix your erros.</p>
+    <p>Please check the comment form below the post and fix your errors.</p>
     <a href="#comment-form">Fix!</a>
 </div>
 {% endif %}
@@ -31,7 +31,13 @@
     <form action="{% url "read-later" %}" method="POST">
         {% csrf_token %}
         <input type="hidden" value="{{ post.id }}" name="post_id">
-        <button>Read Later</button>
+        <button>
+            {% if saved_for_later%}
+                Remove from "Read Later" List
+            {%else%}
+                Read Later
+            {%endif%}
+        </button>
     </form>
 </div>
 <article>
